Initial Implementation (#1)
feat: implement MCP vector search server

Implements a Model Context Protocol server that indexes documents using
semantic embeddings and provides search capabilities through MCP tools.

Core features:
- Configurable ingest pipeline with multiple strategies (whole-document,
  namespace-doc, file-path, chunked, code-analysis)
- Path specs with glob patterns and named captures for metadata
- Metadata filtering and dynamic schema generation
- File watching for automatic re-indexing
- MCP resources for ingestion observability
- Library usage support with classpath resources

Includes comprehensive documentation, testing infrastructure, and
GitHub CI workflows.